Added rest of dungeons. Users can cycle through stones and medallions.

--- a/index.html
+++ b/index.html
@@ -214,24 +214,21 @@
                     src="img/Dungeon Unknown.png">
             </div>
             <div class="numbered-item">
-                <img class="item" data-value="0" data-item="dungeon" data-dungeon="forest"
+                <img class="item" data-value="0" data-item="dungeon" data-dungeon="fire" src="img/Dungeon Unknown.png">
+            </div>
+            <div class="numbered-item">
+                <img class="item" data-value="0" data-item="dungeon" data-dungeon="water" src="img/Dungeon Unknown.png">
+            </div>
+            <div class="numbered-item">
+                <img class="item" data-value="0" data-item="dungeon" data-dungeon="spirit"
                     src="img/Dungeon Unknown.png">
             </div>
             <div class="numbered-item">
-                <img class="item" data-value="0" data-item="dungeon" data-dungeon="forest"
+                <img class="item" data-value="0" data-item="dungeon" data-dungeon="shadow"
                     src="img/Dungeon Unknown.png">
             </div>
             <div class="numbered-item">
-                <img class="item" data-value="0" data-item="dungeon" data-dungeon="forest"
-                    src="img/Dungeon Unknown.png">
-            </div>
-            <div class="numbered-item">
-                <img class="item" data-value="0" data-item="dungeon" data-dungeon="forest"
-                    src="img/Dungeon Unknown.png">
-            </div>
-            <div class="numbered-item">
-                <img class="item" data-value="0" data-item="dungeon" data-dungeon="forest"
-                    src="img/Dungeon Unknown.png">
+                <img class="item" data-value="1" data-item="dungeon" data-dungeon="free" src="img/Dungeon Unknown.png">
             </div>
         </div>
         <div class="row">
@@ -278,11 +275,63 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="numbered-item">
+                <img class="item" data-value="0" data-item="dungeon" data-dungeon="deku" src="img/Dungeon Unknown.png">
+            </div>
+            <div class="numbered-item">
+                <img class="item" data-value="0" data-item="dungeon" data-dungeon="dc" src="img/Dungeon Unknown.png">
+            </div>
+            <div class="numbered-item">
+                <img class="item" data-value="0" data-item="dungeon" data-dungeon="jabu" src="img/Dungeon Unknown.png">
+            </div>
+            <div class="numbered-item">
+                <div class="dungeon-label item-label">GTG</div>
+                <div class="keys">
+                    <img src="img/Key Small.png">
+                </div>
+            </div>
+            <div class="numbered-item">
+                <div class="dungeon-label item-label">GF</div>
+                <div class="keys">
+                    <img src="img/Key Small.png">
+                </div>
+            </div>
+            <div class="numbered-item">
+                <div class="dungeon-label item-label">GC</div>
+                <div class="keys">
+                    <img src="img/Key Small.png">
+                    <img src="img/Key Boss.png">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="numbered-item">
+                <div class="dungeon-label item-label">Deku</div>
+            </div>
+            <div class="numbered-item">
+                <div class="dungeon-label item-label">DC</div>
+            </div>
+            <div class="numbered-item">
+                <div class="dungeon-label item-label">Jabu</div>
+            </div>
+            <div class="numbered-item">
+                <div class="dungeon-label item-label">Ice</div>
+            </div>
+            <div class="numbered-item">
+                <div class="dungeon-label item-label">BotW</div>
+            </div>
+            <div class="numbered-item">
+                <div class="keys">
+                    <img src="img/Key Small.png">
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
 <footer>
-    <script src='tracker.js'></script>
+    <script src='inventory.js'></script>
 </footer>
 
 </html>
