Added small keys to the inventory

--- a/index.html
+++ b/index.html
@@ -235,44 +235,45 @@
             <div class="numbered-item">
                 <div class="dungeon-label item-label">Frst</div>
                 <div class="keys">
-                    <img src="img/Key Small.png">
-                    <img src="img/Key Boss.png">
+                    <img class="item" data-value="0" data-item="key-small" data-key="forest" src="img/Key Small.png">
+                    <img class="item" data-value="0" data-item="key-boss" data-key="forest" src="img/Key Boss.png">
+                    <div class="small-key-num item-label">0</div>
                 </div>
             </div>
             <div class="numbered-item">
                 <div class="dungeon-label item-label">Fire</div>
                 <div class="keys">
-                    <img src="img/Key Small.png">
-                    <img src="img/Key Boss.png">
+                    <img class="item" data-value="0" data-item="key-small" data-key="fire" src="img/Key Small.png">
+                    <img class="item" data-value="0" data-item="key-boss" data-key="fire" src="img/Key Boss.png">
+                    <div class="small-key-num item-label">0</div>
                 </div>
             </div>
             <div class="numbered-item">
                 <div class="dungeon-label item-label">Water</div>
                 <div class="keys">
-                    <img src="img/Key Small.png">
-                    <img src="img/Key Boss.png">
+                    <img class="item" data-value="0" data-item="key-small" data-key="water" src="img/Key Small.png">
+                    <img class="item" data-value="0" data-item="key-boss" data-key="water" src="img/Key Boss.png">
+                    <div class="small-key-num item-label">0</div>
                 </div>
             </div>
             <div class="numbered-item">
                 <div class="dungeon-label item-label">Sprt</div>
                 <div class="keys">
-                    <img src="img/Key Small.png">
-                    <img src="img/Key Boss.png">
+                    <img class="item" data-value="0" data-item="key-small" data-key="spirit" src="img/Key Small.png">
+                    <img class="item" data-value="0" data-item="key-boss" data-key="spirit" src="img/Key Boss.png">
+                    <div class="small-key-num item-label">0</div>
                 </div>
             </div>
             <div class="numbered-item">
                 <div class="dungeon-label item-label">Shdw</div>
                 <div class="keys">
-                    <img src="img/Key Small.png">
-                    <img src="img/Key Boss.png">
+                    <img class="item" data-value="0" data-item="key-small" data-key="shadow" src="img/Key Small.png">
+                    <img class="item" data-value="0" data-item="key-boss" data-key="shadow" src="img/Key Boss.png">
+                    <div class="small-key-num item-label">0</div>
                 </div>
             </div>
             <div class="numbered-item">
                 <div class="dungeon-label item-label">Free</div>
-                <div class="keys">
-                    <img src="img/Key Small.png">
-                    <img src="img/Key Boss.png">
-                </div>
             </div>
         </div>
         <div class="row">
@@ -288,20 +289,23 @@
             <div class="numbered-item">
                 <div class="dungeon-label item-label">GTG</div>
                 <div class="keys">
-                    <img src="img/Key Small.png">
+                    <img class="item" data-value="0" data-item="key-small" data-key="gtg" src="img/Key Small.png">
+                    <div class="small-key-num item-label">0</div>
                 </div>
             </div>
             <div class="numbered-item">
                 <div class="dungeon-label item-label">GF</div>
                 <div class="keys">
-                    <img src="img/Key Small.png">
+                    <img class="item" data-value="0" data-item="key-small" data-key="gf" src="img/Key Small.png">
+                    <div class="small-key-num item-label">0</div>
                 </div>
             </div>
             <div class="numbered-item">
                 <div class="dungeon-label item-label">GC</div>
                 <div class="keys">
-                    <img src="img/Key Small.png">
-                    <img src="img/Key Boss.png">
+                    <img class="item" data-value="0" data-item="key-small" data-key="ganon" src="img/Key Small.png">
+                    <img class="item" data-value="0" data-item="key-boss" data-key="ganon" src="img/Key Boss.png">
+                    <div class="small-key-num item-label">0</div>
                 </div>
             </div>
         </div>
@@ -323,7 +327,8 @@
             </div>
             <div class="numbered-item">
                 <div class="keys">
-                    <img src="img/Key Small.png">
+                    <img class="item" data-value="0" data-item="key-small" data-key="botw" src="img/Key Small.png">
+                    <div class="small-key-num item-label">0</div>
                 </div>
             </div>
         </div>
