--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/inventory.css">
 </head>
 
 <body>
@@ -336,7 +337,9 @@
 </body>
 
 <footer>
-    <script src='inventory.js'></script>
+    <script src='js/init.js'></script>
+    <script src='js/inventory.js'></script>
+    <script src='js/checkChestLogic.js'></script>
 </footer>
 
 </html>
