Added logic validation for chests

--- a/html/validation.html
+++ b/html/validation.html
@@ -29,7 +29,7 @@
                 <i class="fa fa-caret-down fa-2x" aria-hidden="true"></i>
             </div>
         </div>
-        <div id="chest-areas" class="section drop-down" data-invalid-count="0">
+        <div id="chests" class="section drop-down" data-invalid-count="0">
             <h2>Chests</h2>
             <div class="flex">
                 <div class="info">
