Refactored inventory to use table cells. Added Ice Traps and Go Mode. (+1 squashed commits)
Squashed commits:

[e20304d] Reworking the inventory structure into a table

--- a/html/inv_6.html
+++ b/html/inv_6.html
@@ -12,19 +12,15 @@
                 <td class="item-group" id="main-items-1">
                     <div>
                         <img class="item" data-value="0" id="deku-stick" src="/img/Deku Stick.png">
-                        <span class="count item-label">0</span>
                     </div>
                     <div>
-                        <img class="item" data-value="0" id="deku-nut" src="/img/Deku Nut.png">
-                        <span class="count item-label">0</span>
+                        <img class="item" data-value="0" id="deku-nuts" src="/img/Deku Nut.png">
                     </div>
                     <div>
                         <img class="item" data-value="0" id="bomb" src="/img/Bomb.png">
-                        <span class="count item-label">0</span>
                     </div>
                     <div>
                         <img class="item" data-value="0" id="bow" src="/img/Bow.png">
-                        <span class="count item-label">0</span>
                     </div>
                     <div>
                         <img class="item" data-value="0" id="arrow-fire" src="/img/Arrow Fire.png">
@@ -38,7 +34,6 @@
                 <td class="item-group" id="main-items-2">
                     <div>
                         <img class="item" data-value="0" id="slingshot" src="/img/Fairy Slingshot.png">
-                        <span class="count item-label">0</span>
                     </div>
                     <div>
                         <img class="item" data-value="0" id="ocarina" src="/img/Ocarina Fairy.png">
@@ -66,8 +61,7 @@
                         <img class="item" data-value="0" id="lens" src="/img/Lens of Truth.png">
                     </div>
                     <div>
-                        <img class="item" data-value="0" id="bean" src="/img/Magic Beans.png">
-                        <span class="count item-label">0</span>
+                        <img class="item" data-value="0" id="magic-bean" src="/img/Magic Beans.png">
                     </div>
                     <div>
                         <img class="item" data-value="0" id="hammer" src="/img/Megaton Hammer.png">
@@ -119,8 +113,7 @@
                         <img class="item" data-value="0" id="magic" src="/img/Magic Small.png">
                     </div>
                     <div>
-                        <img class="item" data-value="1" id="wallet" src="/img/Wallet Default.png">
-                        <span class="count item-label">99</span>
+                        <img class="item" data-value="0" id="wallet" src="/img/Wallet Default.png">
                     </div>
                     <div>
                         <img class="item" data-value="0" id="strength" src="/img/Strength Goron Bracelet.png">
@@ -189,16 +182,13 @@
                 </td>
                 <td class="item-group" id="skull-ice-tri">
                     <div>
-                        <img class="item" data-value="0" id="skulltula" src="/img/Gold Skulltula.png">
-                        <span class="count item-label">0</span>
+                        <img class="item" data-value="0" id="skulltulas" src="/img/Gold Skulltula.png">
                     </div>
                     <div>
                         <img class="item" data-value="0" id="ice-trap" src="/img/Ice Trap.png">
-                        <span class="count item-label">0</span>
                     </div>
                     <div>
                         <img class="item" data-value="0" id="triforce" src="/img/Triforce.png">
-                        <span class="count item-label">0</span>
                     </div>
                 </td>
             </tr>
@@ -206,27 +196,21 @@
                 <td class="item-group" id="songs-1">
                     <div>
                         <img class="item" data-value="0" id="song-zelda" src="/img/Song Zelda's Lullaby.png">
-                        <span class="song-label item-label">Zelda</span>
                     </div>
                     <div>
                         <img class="item" data-value="0" id="song-epona" src="/img/Song Epona's.png">
-                        <span class="song-label item-label">Epona</span>
                     </div>
                     <div>
                         <img class="item" data-value="0" id="song-saria" src="/img/Song Saria's.png">
-                        <span class="song-label item-label">Saria</span>
                     </div>
                     <div>
                         <img class="item" data-value="0" id="song-sun" src="/img/Song Sun's.png">
-                        <span class="song-label item-label">Sun</span>
                     </div>
                     <div>
                         <img class="item" data-value="0" id="song-time" src="/img/Song Time.png">
-                        <span class="song-label item-label">Time</span>
                     </div>
                     <div>
                         <img class="item" data-value="0" id="song-storm" src="/img/Song Storms.png">
-                        <span class="song-label item-label">Storm</span>
                     </div>
                 </td>
             </tr>
@@ -234,49 +218,43 @@
                 <td class="item-group" id="songs-2">
                     <div>
                         <img class="item" data-value="0" id="song-minuet" src="/img/Song Minuet of Forest.png">
-                        <span class="song-label item-label">Min</span>
                     </div>
                     <div>
                         <img class="item" data-value="0" id="song-bolero" src="/img/Song Bolero of Fire.png">
-                        <span class="song-label item-label">Bol</span>
                     </div>
                     <div>
                         <img class="item" data-value="0" id="song-serenade" src="/img/Song Serenade of Water.png">
-                        <span class="song-label item-label">Ser</span>
                     </div>
                     <div>
                         <img class="item" data-value="0" id="song-requiem" src="/img/Song Requiem of Spirit.png">
-                        <span class="song-label item-label">Req</span>
                     </div>
                     <div>
                         <img class="item" data-value="0" id="song-nocturne" src="/img/Song Nocturne of Shadow.png">
-                        <span class="song-label item-label">Noc</span>
                     </div>
                     <div>
                         <img class="item" data-value="0" id="song-prelude" src="/img/Song Prelude of Light.png">
-                        <span class="song-label item-label">Pre</span>
                     </div>
                 </td>
             </tr>
             <tr>
                 <td class="item-group" id="medallions-1">
                     <div>
-                        <img class="item" data-value="0" id="dungeon-forest" src="/img/Dungeon Unknown.png">
+                        <img class="item" data-value="0" id="medal-forest" src="/img/Dungeon Unknown.png">
                     </div>
                     <div>
-                        <img class="item" data-value="0" id="dungeon-fire" src="/img/Dungeon Unknown.png">
+                        <img class="item" data-value="0" id="medal-fire" src="/img/Dungeon Unknown.png">
                     </div>
                     <div>
-                        <img class="item" data-value="0" id="dungeon-water" src="/img/Dungeon Unknown.png">
+                        <img class="item" data-value="0" id="medal-water" src="/img/Dungeon Unknown.png">
                     </div>
                     <div>
-                        <img class="item" data-value="0" id="dungeon-spirit" src="/img/Dungeon Unknown.png">
+                        <img class="item" data-value="0" id="medal-spirit" src="/img/Dungeon Unknown.png">
                     </div>
                     <div>
-                        <img class="item" data-value="0" id="dungeon-shadow" src="/img/Dungeon Unknown.png">
+                        <img class="item" data-value="0" id="medal-shadow" src="/img/Dungeon Unknown.png">
                     </div>
                     <div>
-                        <img class="item" data-value="1" id="dungeon-free" src="/img/Dungeon Unknown.png">
+                        <img class="item" data-value="0" id="medal-free" src="/img/Dungeon Unknown.png">
                     </div>
                 </td>
             </tr>
@@ -286,7 +264,6 @@
                         <div class="dungeon-label item-label">Frst</div>
                         <div class="keys">
                             <img class="item" data-value="0" id="key-forest-small" src="/img/Key Small.png">
-                            <span class="count key-label item-label">0</span>
                             <img class="item" data-value="0" id="key-forest-boss" src="/img/Key Boss.png">
                         </div>
                     </div>
@@ -294,7 +271,6 @@
                         <div class="dungeon-label item-label">Fire</div>
                         <div class="keys">
                             <img class="item" data-value="0" id="key-fire-small" src="/img/Key Small.png">
-                            <span class="count key-label item-label">0</span>
                             <img class="item" data-value="0" id="key-fire-boss" src="/img/Key Boss.png">
                         </div>
                     </div>
@@ -302,7 +278,6 @@
                         <div class="dungeon-label item-label">Water</div>
                         <div class="keys">
                             <img class="item" data-value="0" id="key-water-small" src="/img/Key Small.png">
-                            <span class="count key-label item-label">0</span>
                             <img class="item" data-value="0" id="key-water-boss" src="/img/Key Boss.png">
                         </div>
                     </div>
@@ -310,7 +285,6 @@
                         <div class="dungeon-label item-label">Sprt</div>
                         <div class="keys">
                             <img class="item" data-value="0" id="key-spirit-small" src="/img/Key Small.png">
-                            <span class="count key-label item-label">0</span>
                             <img class="item" data-value="0" id="key-spirit-boss" src="/img/Key Boss.png">
                         </div>
                     </div>
@@ -318,7 +292,6 @@
                         <div class="dungeon-label item-label">Shdw</div>
                         <div class="keys">
                             <img class="item" data-value="0" id="key-shadow-small" src="/img/Key Small.png">
-                            <span class="count key-label item-label">0</span>
                             <img class="item" data-value="0" id="key-shadow-boss" src="/img/Key Boss.png">
                         </div>
                     </div>
@@ -330,13 +303,13 @@
             <tr>
                 <td class="item-group" id="stones-1">
                     <div>
-                        <img class="item" data-value="0" id="dungeon-deku" src="/img/Dungeon Unknown.png">
+                        <img class="item" data-value="0" id="medal-deku" src="/img/Dungeon Unknown.png">
                     </div>
                     <div>
-                        <img class="item" data-value="0" id="dungeon-dc" src="/img/Dungeon Unknown.png">
+                        <img class="item" data-value="0" id="medal-dc" src="/img/Dungeon Unknown.png">
                     </div>
                     <div>
-                        <img class="item" data-value="0" id="dungeon-jabu" src="/img/Dungeon Unknown.png">
+                        <img class="item" data-value="0" id="medal-jabu" src="/img/Dungeon Unknown.png">
                     </div>
                 </td>
                 <td class="item-group" id="mini-dungeons-1">
@@ -347,14 +320,12 @@
                         <div class="dungeon-label item-label">BotW</div>
                         <div class="keys">
                             <img class="item" data-value="0" id="key-botw-small" src="/img/Key Small.png">
-                            <span class="count key-label item-label">0</span>
                         </div>
                     </div>
                     <div>
                         <div class="dungeon-label item-label">GF</div>
                         <div class="keys">
                             <img class="item" data-value="0" id="key-gf-small" src="/img/Key Small.png">
-                            <span class="count key-label item-label">0</span>
                         </div>
                     </div>
                 </td>
@@ -376,14 +347,12 @@
                         <div class="dungeon-label item-label">GTG</div>
                         <div class="keys">
                             <img class="item" data-value="0" id="key-gtg-small" src="/img/Key Small.png">
-                            <span class="count key-label item-label">0</span>
                         </div>
                     </div>
                     <div>
                         <div class="dungeon-label item-label">GC</div>
                         <div class="keys">
                             <img class="item" data-value="0" id="key-ganon-small" src="/img/Key Small.png">
-                            <span class="count key-label item-label">0</span>
                             <img class="item" data-value="0" id="key-ganon-boss" src="/img/Key Boss.png">
                         </div>
                     </div>
@@ -395,10 +364,5 @@
         </tbody>
     </table>
 </body>
-
-<footer>
-    <script src="/js/init.js"></script>
-    <script src="/js/inventory.js"></script>
-</footer>
 
 </html>
