--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                 </tbody>
             </table>
         </div>
-        <div id="chest-list">
+        <div id="chest-list" data-time='child'>
             <div class="header">
                 <h1>Hyrule</h1>
             </div>
