Added Ability validation. Added item and ability checks.

--- a/html/validation.html
+++ b/html/validation.html
@@ -14,8 +14,7 @@
             <h2>Abilities</h2>
             <div class="flex">
                 <div class="info">
-                    <p class="description">Specific sets of items that allow for certain actions.<br>Not implemented yet
-                    </p>
+                    <p class="description">Specific sets of items that allow for certain actions.</p>
                 </div>
                 <i class="fa fa-caret-down fa-2x" aria-hidden="true"></i>
             </div>
